--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -3,9 +3,11 @@ $Rubik:'Rubik Beastly';
   margin: 0;
   padding: 0;
 }
+body{
+
+}
 .header{
   display: flex;
-
     &__icon{
       display: flex;
       align-items: center;
@@ -23,6 +25,8 @@ $Rubik:'Rubik Beastly';
       }
     }
     &__main{
+      position: fixed;
+      z-index: 99;
       background: linear-gradient(orangered, gold);
       width: 100%;
       height: 50px;
