--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,53 +1,97 @@
-$Rubik:'Rubik Beastly';
-*{
+$Rubik: 'Rubik Beastly';
+* {
   margin: 0;
   padding: 0;
 }
-body{
 
+body {
 }
-.header{
+
+.header {
   display: flex;
-    &__icon{
-      display: flex;
-      align-items: center;
-      img{
-        margin-left: 20px;
-        margin-top: 5px;
+
+  &__icon {
+    display: flex;
+    align-items: center;
+
+    img {
+      margin-left: 20px;
+      margin-top: 5px;
+      width: 50px;
+      height: 50px;
+    }
+
+    &-link {
+      font-size: 23px;
+      text-align: center;
+      color: black;
+      font-family: $Rubik;
+    }
+  }
+
+  &__main {
+    position: fixed;
+    z-index: 99;
+    background: linear-gradient(orangered, gold);
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &-logo {
+      img {
         width: 50px;
         height: 50px;
       }
-      &-link{
-        font-size: 23px;
-        text-align: center;
-        color: black;
-        font-family: $Rubik;
-      }
     }
-    &__main{
-      position: fixed;
-      z-index: 99;
-      background: linear-gradient(orangered, gold);
-      width: 100%;
-      height: 50px;
+
+    &-links {
       display: flex;
-      align-items: center;
-      justify-content: space-between;
-      &-logo{
-        img{
-          width: 50px;
-          height: 50px;
-        }
-      }
-      &-links{
-        display: flex;
-        margin-right: 15px;
-        &-item{
-          font-family: $Rubik;
-          margin-left: 15px;
-          text-decoration: none;
-          color: black;
-        }
+      margin-right: 15px;
+
+      &-item {
+        font-family: $Rubik;
+        margin-left: 15px;
+        text-decoration: none;
+        color: black;
       }
     }
+  }
+}
+
+.footer {
+  position: absolute;
+  background: linear-gradient(gold, orangered);
+  width: 100%;
+  height: 100px;
+  top: 969px;
+
+  &__PS {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    color: khaki;
+    margin-top: 40px;
+  }
+
+  &__happy {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: indigo;
+    font-family: $Rubik;
+  }
+
+  &__icons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+    margin-right: 20px;
+    margin-left: 20px;
+    img{
+      width: 40px;
+      height: 40px;
+    }
+  }
 }
