--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -64,7 +64,7 @@ body {
   position: absolute;
   background: linear-gradient(gold, orangered);
   width: 100%;
-  height: 100px;
+  height: 233px;
   top: 969px;
 
   &__PS {
@@ -84,14 +84,35 @@ body {
   }
 
   &__icons {
+    margin-top: 20px;
+    margin-left: 50px;
     display: flex;
     justify-content: space-between;
-    margin-top: 15px;
-    margin-right: 20px;
-    margin-left: 20px;
-    img{
-      width: 40px;
-      height: 40px;
+    &-icons{
+      display: flex;
+      flex-direction: column;
+      img{
+        width: 40px;
+        height: 40px;
+        margin-bottom: 40px;
+      }
+    }
+  }
+  .partners{
+    &__title{
+      h5{
+        text-align: center;
+        margin: 0 150px 10px 50px;
+        color: darkblue;
+        font-family: Papyrus sans-serif;
+      }
+    }
+    &__icons{
+      img{
+        width: 65px;
+        height: 30px;
+        margin-left: 28px;
+      }
     }
   }
 }
