--- a/src/css/smartphones.scss
+++ b/src/css/smartphones.scss
@@ -1,4 +1,3 @@
-
 $lime: #a7e200;
 $ui: system-ui, sans-serif;
 .mainlist {
@@ -20,7 +19,7 @@ $ui: system-ui, sans-serif;
     margin-top: 100px;
     color: white;
     font-family: $ui;
- }
+  }
 
   &-description {
     font-size: 16px;
@@ -30,7 +29,7 @@ $ui: system-ui, sans-serif;
     font-family: $ui;
     display: flex;
     flex-direction: column;
-    &-info{
+    &-info {
       width: 769px;
     }
   }
@@ -38,7 +37,7 @@ $ui: system-ui, sans-serif;
   &-image {
     margin-right: 100px;
     margin-top: 50px;
-    img{
+    img {
       width: 600px;
       height: 400px;
     }
@@ -63,7 +62,7 @@ $ui: system-ui, sans-serif;
         background-color: #171520;
         color: $lime;
       }
-      &-img{
+      &-img {
         width: 18px;
         height: 17px;
         margin-top: 8px;
@@ -74,10 +73,10 @@ $ui: system-ui, sans-serif;
       }
     }
   }
-  &-lox{
+  &-lox {
     display: flex;
     flex-wrap: wrap;
-    &-price{
+    &-price {
       color: $lime;
       display: flex;
       align-items: center;
@@ -86,11 +85,18 @@ $ui: system-ui, sans-serif;
       margin-top: 10px;
     }
   }
+}
+
 
 .smartphones {
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
 
+.container{
+  width: 80%;
+  margin: 0 auto;
 }
